# 3DModelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md
3DModelViewer/: 3DModelViewer.cpp  3DModelViewer.h  CMakeLists.txt  Model.cpp  Model.h  fragmentShader.frag  main.cpp  vertexShader.vert
GLSupportLib/: CMakeLists.txt
GLSupportLib/include/: Buffer.h  Initializer.h  ShaderProgram.h  TypeTraits.h  Window.h
GLSupportLib/src/: Buffer.cpp  Initializer.cpp  ShaderProgram.cpp  Window.cpp
